Creación del comando administrador /clanadmin transfer <clan> <jugador>